--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -1,7 +1,7 @@
-domain = "http://localhost/"
-baseUrl = "/calendar/app/www/"
+domain = "http://localhost/" //domain name
+baseUrl = "/calendar/app/www/" //folder after webroot
 
 
-dsn_master[] = "mysql://root:moises@localhost/calendar"
+dsn_master[] = "mysql://<user>:<password>@<server>/<db>"
 
-dsn_slave[] = "mysql://root:moises@localhost/calendar"
+dsn_slave[] = "mysql://<user>:<password>@<server>/<db>"
